--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FOODDELIVERYAPP"
         tools:targetApi="31">
+        <activity android:name=".view.admin.AdminMainActivity"
+            android:exported="false"/>
         <activity
             android:name=".view.registerActivity"
             android:exported="false" />
@@ -26,7 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.MainActivity" />
+        <activity android:name=".view.customer.MainActivity" />
     </application>
 
 </manifest>
