--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ android {
 }
 
 dependencies {
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
+    implementation("androidx.viewpager2:viewpager2:1.0.0")
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'jp.wasabeef:recyclerview-animators:4.0.1'
     implementation 'androidx.core:core-ktx:1.7.0'
